--- a/template/total file/tabel.html
+++ b/template/total file/tabel.html
@@ -26,15 +26,16 @@
         FOODIE </div>
       <div class="list-group list-group-flush">
         <a href="../index.html" class="list-group-item list-group-item-action  side-nav-one"><i
-            class="fa fa-pencil side-icon" aria-hidden="true"></i>Dash board</a>
-        <a href="" class="list-group-item list-group-item-action  side-nav-one"><i class="fa fa-tasks side-icon"
-            aria-hidden="true"></i>Short cuts</a>
-        <a href="tabel.html" class="list-group-item list-group-item-action  side-nav-one"><i
-            class="fa fa-file-text-o side-icon" aria-hidden="true"></i>Store List</a>
-        <a href="events.html" class="list-group-item list-group-item-action  side-nav-one"><i
-            class="fa fa-table side-icon" aria-hidden="true"></i>Events</a>
-        <a href="foodlist.html" class="list-group-item list-group-item-action  side-nav-one"><i
-            class="fa fa-user side-icon" aria-hidden="true"></i>Profile</a>
+          class="fa fa-pencil side-icon" aria-hidden="true"></i>Dash board</a>
+  <a href="foodcatagories.html" class="list-group-item list-group-item-action  side-nav-one"><i class="fa fa-tasks side-icon"
+          aria-hidden="true"></i>Food Categories</a>
+  <a href="tabel.html" class="list-group-item list-group-item-action  side-nav-one"><i
+          class="fa fa-file-text-o side-icon" aria-hidden="true"></i>Store List</a>
+  <a href="menu.html" class="list-group-item list-group-item-action  side-nav-one"><i
+          class="fa fa-table side-icon" aria-hidden="true"></i>Menu</a>
+  <a href="customer.html" class="list-group-item list-group-item-action  side-nav-one"><i
+          class="fa fa-user side-icon" aria-hidden="true"></i>Customer</a>
+  <a href="orders.html" class="list-group-item list-group-item-action  side-nav-one"><i class="fa fa-shopping-cart  side-icon" aria-hidden="true"></i>Orders</a>
 
       </div>
     </div>
@@ -62,211 +63,151 @@
 
         </div>
       </div>
+      <div class="row">
+        
+      </div>
         <div class="row">
           <div class="col-lg col-md-5 col-sm-12 tab">
             <div class="card">
-              <div class="card-header">Store 1</div>
+              <div class="card-header d-flex "><span>Restaurants</span>
+                <a class="create btn-group btn-group-toggle btn btn-secondary active" href="forms/restaurentadd.html">Create</a>
+              </div>
+              
               <div class="card-body">
                 <table class="table">
-                  <thead>
+                  <thead class="colore">
                     <tr>
-                      <th scope="col">#</th>
-                      <th scope="col">Breakfast</th>
-                      <th scope="col">Cost</th>
-                      <th scope="col">lunch</th>
-                      <th scope="col">Cost</th>
-                      <th scope="col">Dinner</th>
-                      <th scope="col">Cost</th>
+                      <th scope="col">ID</th>
+                      <th scope="col">Restaurant Name </th>
+                      <th scope="col">Location </th>
+                      <th scope="col">Ratings</th>
+                      <th scope="col">Restaurant Sale(%)</th>
+                      <th scope="col">Joining Date</th>
+                      <th scope="col">Action</th>
+                      
                     </tr>
                   </thead>
                   <tbody>
                     <tr>
-                      <th scope="row">1</th>
-                      <td>Idly</td>
-                      <td>10</td>
-                      <td>Meals</td>
+                      <td scope="row">5621</td>
+                      <td>Adayar Bhavan</td>
+                      <td>Tiruneveli</td>
+                      <td class="tab-one"><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star-half-o" aria-hidden="true"></i><i class="fa fa-star-o" aria-hidden="true"></i></td>
                       <td>90</td>
-                      <td>Rava Dosai</td>
-                      <td>15</td>
+                      <td>23/09/2020</td>
+                      <td class="t-two"><a href=""><i class="fa fa-pencil edit" aria-hidden="true"></i></a></td>
+                      
                     </tr>
                     <tr>
-                      <th scope="row">2</th>
-                      <td>Pongal</td>
-                      <td>25</td>
-                      <td>Curd Rice</td>
-                      <td>30</td>
-                      <td>Poori</td>
-                      <td>20</td>
-                    </tr>
-                    <tr>
-                      <th scope="row">3</th>
-                      <td>Appam</td>
-                      <td>18</td>
-                      <td>Lemon Rice</td>
-                      <td>33</td>
-                      <td>chappathi</td>
-                      <td>15</td>
-                    </tr>
-                  </tbody>
-                </table>
-              </div>
-            </div>
-          </div>
+                      <td scope="row">5622</td>
+                      <td>Madhuram</td>
+                      <td>Chinna kumar patti</td>
 
-        </div>
+                      <td class="tab-one"><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star-o" aria-hidden="true"></i><i class="fa fa-star-o" aria-hidden="true"></i></td>
 
-
-        <div class="col-lg col-md-5 col-sm-12 tab">
-          <div class="card">
-            <div class="card-header">Store 1</div>
-            <div class="card-body">
-              <table class="table">
-                <thead>
-                  <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Breakfast</th>
-                    <th scope="col">Cost</th>
-                    <th scope="col">lunch</th>
-                    <th scope="col">Cost</th>
-                    <th scope="col">Dinner</th>
-                    <th scope="col">Cost</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <th scope="row">1</th>
-                    <td>Idly</td>
-                    <td>10</td>
-                    <td>Meals</td>
-                    <td>90</td>
-                    <td>Rava Dosai</td>
-                    <td>15</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">2</th>
-                    <td>Pongal</td>
-                    <td>25</td>
-                    <td>Curd Rice</td>
-                    <td>30</td>
-                    <td>Poori</td>
-                    <td>20</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">3</th>
-                    <td>Appam</td>
-                    <td>18</td>
-                    <td>Lemon Rice</td>
-                    <td>33</td>
-                    <td>chappathi</td>
-                    <td>15</td>
-                  </tr>
-                </tbody>
-              </table>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-lg col-md-5 col-sm-12 tab">
-            <div class="card">
-              <div class="card-header">Store 2</div>
-              <div class="card-body">
-                <table class="table">
-                  <thead>
-                    <tr>
-                      <th scope="col">#</th>
-                      <th scope="col">Breakfast</th>
-                      <th scope="col">Cost</th>
-                      <th scope="col">lunch</th>
-                      <th scope="col">Cost</th>
-                      <th scope="col">Dinner</th>
-                      <th scope="col">Cost</th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <tr>
-                      <th scope="row">1</th>
-                      <td>Onion Dosa</td>
-                      <td>20</td>
-                      <td>Ghee Rice</td>
-                      <td>40</td>
-                      <td>Chappathi</td>
-                      <td>20</td>
-                    </tr>
-                    <tr>
-                      <th scope="row">2</th>
-                      <td>Pongal</td>
-                      <td>25</td>
-                      <td>Meals</td>
-                      <td>60</td>
-                      <td>Parrota</td>
-                      <td>10</td>
-                    </tr>
-                    <tr>
-                      <th scope="row">3</th>
-                      <td>Uthappam</td>
-                      <td>18</td>
-                      <td>Tomato rice</td>
-                      <td>33</td>
-                      <td>Idly vada</td>
-                      <td>18</td>
-                    </tr>
-                  </tbody>
-                </table>
-              </div>
-            </div>
-          </div>
-        </div>
-
-          <div class="col-lg col-md-5 col-sm-12 tab">
-            <div class="card">
-              <div class="card-header">Store 3</div>
-              <div class="card-body">
-                <table class="table">
-                  <thead>
-                    <tr>
-                      <th scope="col">#</th>
-                      <th scope="col">Breakfast</th>
-                      <th scope="col">Cost</th>
-                      <th scope="col">lunch</th>
-                      <th scope="col">Cost</th>
-                      <th scope="col">Dinner</th>
-                      <th scope="col">Cost</th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <tr>
-                      <th scope="row">1</th>
-                      <td>Poori</td>
-                      <td>18</td>
-                      <td>Meals</td>
                       <td>75</td>
-                      <td>Ragi Dosai</td>
-                      <td>15</td>
+                      <td>23/09/2020</td>
+                      <td class="t-two"><a href=""><i class="fa fa-pencil edit" aria-hidden="true"></i></a></td>
+                     
                     </tr>
                     <tr>
-                      <th scope="row">2</th>
-                      <td>Pongal</td>
-                      <td>35</td>
-                      <td>Friedrice</td>
-                      <td>90</td>
-                      <td>Ghee Roast</td>
-                      <td>35</td>
-                    </tr>
-                    <tr>
-                      <th scope="row">3</th>
-                      <td>Idiyappam</td>
-                      <td>40</td>
-                      <td>Briyani</td>
+                      <td scope="row">5623</td>
+                      <td>SouthIndian Food</td>
+                      <td>Kadaiyaluritti</td>
+                      <td class="tab-one"><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star-half-o" aria-hidden="true"></i><i class="fa fa-star-o" aria-hidden="true"></i></td>
+
                       <td>80</td>
-                      <td>Whaet Dosai</td>
-                      <td>30</td>
+                      <td>26/09/2020</td>
+                      <td class="t-two"><a href=""><i class="fa fa-pencil edit" aria-hidden="true"></i></a></td>
+                      
                     </tr>
+                    <tr>
+                      <td scope="row">5624</td>
+                      <td>Kingfisher</td>
+                      <td>Nallur</td>
+                      <td class="tab-one"><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star-half-o" aria-hidden="true"></i><i class="fa fa-star-o" aria-hidden="true"></i></td>
+
+                      <td>65</td>
+                      <td>28/09/2020</td>
+                      <td class="t-two"><a href=""><i class="fa fa-pencil edit" aria-hidden="true"></i></a></td>
+                      
+                    </tr>
+                    <tr>
+                      <td scope="row">5625</td>
+                      <td>Aryan Bhavan</td>
+                      <td>Palayamkottai</td>
+                      <td class="tab-one"><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star-half-o" aria-hidden="true"></i><i class="fa fa-star-o" aria-hidden="true"></i></td>
+
+                      <td>84</td>
+                      <td>29/09/2020</td>
+                      <td class="t-two"><a href=""><i class="fa fa-pencil edit" aria-hidden="true"></i></a></td>
+                      
+                    </tr>
+                    <tr>
+                      <td scope="row">5626</td>
+                      <td>Spencers</td>
+                      <td>Alangulam</td>
+                      <td class="tab-one"><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star-half-o" aria-hidden="true"></i><i class="fa fa-star-o" aria-hidden="true"></i></td>
+
+                      <td>85</td>
+                      <td>1/10/2020</td>
+                      <td class="t-two"><a href=""><i class="fa fa-pencil edit" aria-hidden="true"></i></a></td>
+                      
+                    </tr>
+                    <tr>
+                      <td scope="row">5627</td>
+                      <td>Hotel Vairam</td>
+                      <td>Chattram</td>
+                      <td class="tab-one"><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star-half-o" aria-hidden="true"></i><i class="fa fa-star-o" aria-hidden="true"></i></td>
+
+                      <td>92</td>
+                      <td>2/10/2020</td>
+                      <td class="t-two"><a href=""><i class="fa fa-pencil edit" aria-hidden="true"></i></a></td>
+                      
+                    </tr>
+                    <tr>
+                      <td scope="row">5628</td>
+                      <td>Talk Over Table</td>
+                      <td>Nallur</td>
+                      <td class="tab-one"><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star-half-o" aria-hidden="true"></i><i class="fa fa-star-o" aria-hidden="true"></i></td>
+
+                      <td>95</td>
+                      <td>5/10/2020</td>
+                      <td class="t-two"><a href=""><i class="fa fa-pencil edit" aria-hidden="true"></i></a></td>
+                      
+                    </tr>
+                    <tr>
+                      <td scope="row">5629</td>
+                      <td>Udupi</td>
+                      <td>Gandhinagar</td>
+                      <td class="tab-one"><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star-half-o" aria-hidden="true"></i><i class="fa fa-star-o" aria-hidden="true"></i></td>
+
+                      <td>80</td>
+                      <td>10/10/2020</td>
+                      <td class="t-two"><a href=""><i class="fa fa-pencil edit" aria-hidden="true"></i></a></td>
+                      
+                    </tr>
+                    <tr>
+                      <td scope="row">5630</td>
+                      <td>Illango</td>
+                      <td>Marantahi</td>
+                      <td class="tab-one"><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star-half-o" aria-hidden="true"></i><i class="fa fa-star-o" aria-hidden="true"></i></td>
+
+                      <td>77</td>
+                      <td>15/10/2020</td>
+                      <td class="t-two"><a href=""><i class="fa fa-pencil edit" aria-hidden="true"></i></a></td>
+                      
+                    </tr>
+
                   </tbody>
                 </table>
               </div>
-
             </div>
           </div>
+
+        </div>
+
+
         
 
 
