--- a/template/index.html
+++ b/template/index.html
@@ -21,19 +21,21 @@
 
     <!-- Sidebar -->
     <div class=" border-right side-nav " id="sidebar-wrapper ">
-      <div class="sidebar-heading text-center page-title  side-header"> <img src="image/logo.jpg" alt="" srcset=""> FOODIE </div>
+      <div class="sidebar-heading text-center page-title  side-header"> <img src="image/logo.jpg" alt="" srcset="">
+        FOODIE </div>
       <div class="list-group list-group-flush">
-        <a href="index.html" class="list-group-item list-group-item-action  side-nav-one"><i
-            class="fa fa-pencil side-icon" aria-hidden="true"></i>Dash board</a>
-        <a href="total file/tabel.html" class="list-group-item list-group-item-action  side-nav-one"><i
-            class="fa fa-tasks side-icon" aria-hidden="true"></i>Short cuts</a>
-        <a href="total file/tabel.html" class="list-group-item list-group-item-action  side-nav-one"><i
-            class="fa fa-file-text-o side-icon" aria-hidden="true"></i>Store List</a>
-        <a href="total file/events.html" class="list-group-item list-group-item-action  side-nav-one"><i class="fa fa-table side-icon"
-            aria-hidden="true"></i>Events</a>
-        <a href="total file/foodlist.html" class="list-group-item list-group-item-action  side-nav-one"><i class="fa fa-user side-icon"
-            aria-hidden="true"></i>Profile</a>
-       
+        <a href="index.html" class="list-group-item list-group-item-action  side-nav-one "><i
+          class="fa fa-pencil side-icon" aria-hidden="true"></i>Dash board</a>
+  <a href="total file/foodcatagories.html" class="list-group-item list-group-item-action  side-nav-one"><i class="fa fa-tasks side-icon"
+          aria-hidden="true"></i>Food Categories</a>
+  <a href="total file/tabel.html" class="list-group-item list-group-item-action  side-nav-one"><i
+          class="fa fa-file-text-o side-icon" aria-hidden="true"></i>Store List</a>
+  <a href="total file/menu.html" class="list-group-item list-group-item-action  side-nav-one"><i
+          class="fa fa-table side-icon" aria-hidden="true"></i>Menu</a>
+  <a href="total file/customer.html" class="list-group-item list-group-item-action  side-nav-one"><i
+          class="fa fa-user side-icon" aria-hidden="true"></i>Customer</a>
+  <a href="total file/orders.html" class="list-group-item list-group-item-action  side-nav-one"><i class="fa fa-shopping-cart  side-icon" aria-hidden="true"></i>Orders</a>
+
       </div>
     </div>
     <!-- /#sidebar-wrapper -->
@@ -81,7 +83,7 @@
               <span class="title">USERS</span>
               <h5 class="card-title ">2,290</h5>
               <span class="stats-small__percentage stats-small__percentage--increase"><img src="./image/download.svg"
-                  alt="" srcset=""> 4.7%</span>
+                  alt="" srcset=""> 3.7%</span>
             </div>
           </div>
         </div>
@@ -91,7 +93,7 @@
               <span class="title">STORES</span>
               <h5 class="card-title">182</h5>
               <span class="stats-small__percentage stats-small__percentage--increase"> <img src="./image/download.svg"
-                  alt="" srcset=""> 4.7%</span>
+                  alt="" srcset=""> 1.7%</span>
 
             </div>
 
@@ -100,19 +102,20 @@
         <div class="col-lg col-md-4 col-sm-12 boxshow-1">
           <div class="card text-center post ">
             <div class="card-body">
-              <span class="title">COMMENTS</span>
-              <h5 class="card-title ">3,435</h5>
-              <span class="stats-small__percentage stats-small__percentage--increase">4.7%</span>
+              <span class="title">SELLS GRAPH</span>
+              <h5 class="card-title ">$3,435</h5>
+              <span class="stats-small__percentage stats-small__percentage--increase"><img src="./image/download.svg"
+                alt="" srcset="">2.7%</span>
             </div>
           </div>
         </div>
         <div class="col-lg col-md-4 col-sm-12 boxshow-1">
           <div class="card text-center post">
             <div class="card-body">
-              <span class="title">nothing</span>
+              <span class="title">TOTAL VISITOR</span>
               <h5 class="card-title">2,412</h5>
               <span class="stats-small__percentage stats-small__percentage--increase "><img src="./image/download.svg"
-                  alt="" srcset=""> 4.7%</span>
+                  alt="" srcset=""> 3.7%</span>
 
             </div>
           </div>
@@ -121,10 +124,10 @@
           <div class="card text-center post">
             <div class="card-body ">
 
-              <span class="title">POSTS</span>
+              <span class="title">TOTAL ORDERS</span>
               <h5 class="card-title ">2,390</h5>
               <span class="stats-small__percentage stats-small__percentage--increase">
-                <img src="./image/download.svg" alt="" srcset=""> 4.7%</span>
+                <img src="./image/download.svg" alt="" srcset=""> 3.7%</span>
             </div>
           </div>
         </div>
@@ -175,11 +178,11 @@
           <div id="pie" style="width: 500px; height: 300px;">
 
           </div>
-         
+
         </div>
       </div>
 
- 
+
 
 
 
@@ -323,53 +326,61 @@
 
     charttwo.setOption(option);
   </script>
-   <script type="text/javascript">
+  <script type="text/javascript">
     // based on prepared DOM, initialize echarts instance
-   
+
     var myChart = echarts.init(document.getElementById('pie'));
-   // specify chart configuration item and data
-   var option={
-    
-  tooltip: {
-      trigger: 'item',
-      formatter: '{a} <br/>{b} : {c} ({d}%)'
-  },
-  legend: {
-      orient: 'vertical',
-      left: 'left',
-      data: ['Tvl','Alangulam','Thoothukudi','Nagercoil']
-  },
-  series: [
-      {
-          name: 'User',
-          type: 'pie',
-          radius: '55%',
-          center: ['50%', '60%'],
-          data: [
-              {value: 335, name: 'Tirunelveli'},
-              {value: 310, name: 'Alangulam'},
-              {value: 234, name: 'thootukudi'},
-              {value: 135, name: 'Nagercoil'},
-              
-          ],
-          emphasis: {
-              itemStyle: {
-                  shadowBlur: 10,
-                  shadowOffsetX: 0,
-                  shadowColor: 'rgba(0, 0, 0, 0.5)'
-              }
+    // specify chart configuration item and data
+    var option = {
+
+      tooltip: {
+        trigger: 'item',
+        formatter: '{a} <br/>{b} : {c} ({d}%)'
+      },
+      legend: {
+        orient: 'vertical',
+        left: 'left',
+        data: ['Tirunelveli', 'Alangulam', 'Thoothukudi', 'Nagercoil']
+      },
+      series: [{
+        name: 'User',
+        type: 'pie',
+        radius: '55%',
+        center: ['50%', '60%'],
+        data: [{
+            value: 335,
+            name: 'Tirunelveli'
+          },
+          {
+            value: 310,
+            name: 'Alangulam'
+          },
+          {
+            value: 234,
+            name: 'Thoothukudi'
+          },
+          {
+            value: 135,
+            name: 'Nagercoil'
+          },
+
+        ],
+        emphasis: {
+          itemStyle: {
+            shadowBlur: 10,
+            shadowOffsetX: 0,
+            shadowColor: 'rgba(0, 0, 0, 0.5)'
           }
-      }
-  ]
-};
+        }
+      }]
+    };
 
     // use configuration item and data specified to show chart
     myChart.setOption(option);
-   
   </script>
 
-    
-   
+
+
   </script>
 
 
