--- a/template/total file/events.html
+++ b/template/total file/events.html
@@ -25,8 +25,8 @@
       <div class="list-group list-group-flush">
         <a href="../index.html" class="list-group-item list-group-item-action  side-nav-one"><i
             class="fa fa-pencil side-icon" aria-hidden="true"></i>Dash board</a>
-        <a href="" class="list-group-item list-group-item-action  side-nav-one"><i
-            class="fa fa-tasks side-icon" aria-hidden="true"></i>Short cuts</a>
+        <a href="menu.html" class="list-group-item list-group-item-action  side-nav-one"><i
+            class="fa fa-tasks side-icon" aria-hidden="true"></i>Menu</a>
         <a href="tabel.html" class="list-group-item list-group-item-action  side-nav-one"><i
             class="fa fa-file-text-o side-icon" aria-hidden="true"></i>Store List</a>
         <a href="events.html" class="list-group-item list-group-item-action  side-nav-one"><i class="fa fa-table side-icon"
