--- a/template/total file/forms/cusprofile.html
+++ b/template/total file/forms/cusprofile.html
@@ -7,9 +7,9 @@
   <meta name="description" content="">
   <meta name="author" content="">
   <title>Dashboard</title>
-  <link rel="stylesheet" href="../style/style.css">
+  <link rel="stylesheet" href="../../style/style.css">
   <!-- <link rel="stylesheet" href="./style/style.css"> -->
-  <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="../../../node_modules/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -21,18 +21,19 @@
 
     <!-- Sidebar -->
     <div class=" border-right side-nav " id="sidebar-wrapper ">
-      <div class="sidebar-heading text-center  side-header"><img src="../image/logo.jpg" alt="" srcset="">FOODIE </div>
+      <div class="sidebar-heading text-center  side-header"><img src="../../image/logo.jpg" alt="" srcset="">FOODIE </div>
       <div class="list-group list-group-flush">
-        <a href="../index.html" class="list-group-item list-group-item-action  side-nav-one"><i
-            class="fa fa-pencil side-icon" aria-hidden="true"></i>Dash board</a>
-        <a href="" class="list-group-item list-group-item-action  side-nav-one"><i
-            class="fa fa-tasks side-icon" aria-hidden="true"></i>Short cuts</a>
-        <a href="tabel.html" class="list-group-item list-group-item-action  side-nav-one"><i
-            class="fa fa-file-text-o side-icon" aria-hidden="true"></i>Store List</a>
-        <a href="events.html" class="list-group-item list-group-item-action  side-nav-one"><i class="fa fa-table side-icon"
-            aria-hidden="true"></i>Events</a>
-        <a href="foodlist.html" class="list-group-item list-group-item-action  side-nav-one"><i class="fa fa-user side-icon"
-            aria-hidden="true"></i>Profile</a>
+        <a href="../../index.html" class="list-group-item list-group-item-action  side-nav-one"><i
+          class="fa fa-pencil side-icon" aria-hidden="true"></i>Dash board</a>
+  <a href="../foodcatagories.html" class="list-group-item list-group-item-action  side-nav-one"><i class="fa fa-tasks side-icon"
+          aria-hidden="true"></i>Food Categories</a>
+  <a href="../tabel.html" class="list-group-item list-group-item-action  side-nav-one"><i
+          class="fa fa-file-text-o side-icon" aria-hidden="true"></i>Store List</a>
+  <a href="../menu.html" class="list-group-item list-group-item-action  side-nav-one"><i
+          class="fa fa-table side-icon" aria-hidden="true"></i>Menu</a>
+  <a href="../customer.html" class="list-group-item list-group-item-action  side-nav-one"><i
+          class="fa fa-user side-icon" aria-hidden="true"></i>Customer</a>
+  <a href="../orders.html" class="list-group-item list-group-item-action  side-nav-one"><i class="fa fa-shopping-cart  side-icon" aria-hidden="true"></i>Orders</a>
         <!-- <a href="" class="list-group-item list-group-item-action  side-nav-one">Status</a> -->
       </div>
     </div>
@@ -63,12 +64,12 @@
 
       <div class="main-content-container container-fluid px-4">
         <!-- Page Header -->
-        <div class="page-header row no-gutters py-4">
+        <!-- <div class="page-header row no-gutters py-4">
           <div class="col-12 col-sm-4 text-center text-sm-left mb-0">
             <span class="text-uppercase page-subtitle">Overview</span>
             <h3 class="page-title">User Profile</h3>
           </div>
-        </div>
+        </div> -->
         <!-- End Page Header -->
         <!-- Default Light Table -->
         <div class="row">
@@ -77,7 +78,7 @@
               <div class="card-header">Profile Picture</div>
               <div class="card-body text-center">
                   <!-- Profile picture image-->
-                  <img class="img-account-profile rounded-circle mb-2 prof" src="../image/prof-1.png" alt="">
+                  <img class="img-account-profile rounded-circle mb-2 prof" src="../../image/prof-1.png" alt="">
                   <!-- Profile picture help block-->
                   <div class="small font-italic text-muted mb-4">JPG or PNG no larger than 5 MB</div>
                   <!-- Profile picture upload button-->
@@ -136,8 +137,9 @@
                             <input type="text" class="form-control" id="inputZip">
                           </div>
                         </div>
+                        <button class="btn btn-primary d-block" type="submit">Save and Add</button>
                        
-                        <button type="submit" class="btn btn-accent">Update Account</button>
+                       
                       </form>
                     </div>
                   </div>
