update new file

--- a/app/template/index.html
+++ b/app/template/index.html
@@ -112,7 +112,7 @@
         <div class="col-lg col-md-4 col-sm-12 boxshow-1">
           <div class="card text-center post">
             <div class="card-body">
-              <span class="title">nothing</span>
+              <span class="title">SALES</span>
               <h5 class="card-title">2,412</h5>
               <span class="stats-small__percentage stats-small__percentage--increase "><img src="./image/download.svg"
                   alt="" srcset=""> 4.7%</span>
@@ -124,8 +124,8 @@
           <div class="card text-center post">
             <div class="card-body ">
 
-              <span class="title">POSTS</span>
-              <h5 class="card-title ">2,390</h5>
+              <span class="title">NEW USERS</span>
+              <h5 class="card-title ">590</h5>
               <span class="stats-small__percentage stats-small__percentage--increase">
                 <img src="./image/download.svg" alt="" srcset=""> 4.7%</span>
             </div>
